@@ -11,6 +11,9 @@ pull\-lp\-source \- download a source package from Launchpad
 \fBpull\-lp\-source\fR downloads and extracts the specified
 \fIversion\fR of <\fBsource package\fR> from Launchpad, or the latest
 version of the specified \fIrelease\fR.
+To request a version from a particular pocket say
+\fIrelease\fB\-\fIpocket\fR (with a magic \fB\-release\fR for only the
+release pocket).
 If no \fIversion\fR or \fIrelease\fR is specified, the latest version in
 the development release will be downloaded.
 
